@@ -5,8 +5,9 @@ LIST OF CHANGES
    within a job (cope with hyperthreading where LSF gives one slot to what is presented
    as two cpu - this will try to make use of apparent CPUs)
  - make number of slots used by seq_alignment configurable
- - use npg_tracking::util::abs_path to patch absolute paths (so allow running on file 
-   server)
+ - allow running on file server by
+   + use npg_tracking::util::abs_path to patch absolute paths
+   + avoid perl chdir to give job working dir
  - drop not_strip_bam_tag option, explicitly disable bam tag stripping in seq_alignment
  - use lowload lsf queue
  - seqchksum_comparator to cope with higher plexing (with a chdir)
